--- a/Express/package.json
+++ b/Express/package.json
@@ -3,8 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "express": "3.1.0",
+    "express": "3.4.6",
     "socket.io": "0.9.13",
-    "mongodb": "1.1.11"
+    "mongodb": "1.1.11",
+    "stylus": "0.41.0",
+    "jade": "0.35.0"
   }
 }
